# ActPlane

./: .gitignore  .gitmodules  .mcp.json  CITATION.cff  CLAUDE.md  Cargo.toml  Makefile  README.md  actplane.yaml
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: ci.yml  wait-for-crate.sh
bpf/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  capability.bpf.h  channel.bpf.h  process  process.bpf.c  process.c  process.h  taint.h  taint_engine.bpf.h  test_taint  test_taint.c
bpf/src/: capability.rs  lib.rs
collector/: Cargo.toml  README.md  build.rs
collector/src/: audit.rs  binary_extractor.rs  config.rs  control.rs  doctor.rs  feedback.rs  hook.rs  main.rs  mcp.rs  report.rs  runtime.rs  setup.rs  template_generate.rs  templates.rs
collector/src/dsl/: ast.rs  engine.rs  lower.rs  mod.rs  parse.rs
collector/test/: policy-corpus.sh
collector/test/policies/: 03_mediation_lineage.yaml  04_workspace_confinement.yaml  05_test_before_commit.yaml  06_test_before_commit_since.yaml  11_destructive_confirm.yaml  12_task_non_interference.yaml  13_migration_freshness.yaml  14_linter_enforced_writes.yaml  15_subagent_workspace.yaml  18_untrusted_tool_network.yaml  20_delegated_policy_layer.yaml
collector/tests/: cli_ux.rs  mcp_protocol.rs  watch_control.rs
corpus/: collect.sh  manifest.jsonl
corpus/BerriAI__litellm/: meta.json
corpus/CherryHQ__cherry-studio/: meta.json
corpus/ChromeDevTools__chrome-devtools-mcp/: meta.json
corpus/HKUDS__LightRAG/: meta.json
corpus/HKUDS__nanobot/: meta.json
corpus/JuliusBrussee__caveman/: meta.json
corpus/MemPalace__mempalace/: meta.json
corpus/NousResearch__hermes-agent/: meta.json
corpus/OpenHands__OpenHands/: meta.json
corpus/Significant-Gravitas__AutoGPT/: meta.json
corpus/ZhuLinsen__daily_stock_analysis/: meta.json
corpus/aaif-goose__goose/: meta.json
corpus/abhigyanpatwari__GitNexus/: meta.json
corpus/addyosmani__agent-skills/: meta.json
corpus/affaan-m__ECC/: meta.json
corpus/agno-agi__agno/: meta.json
corpus/alibaba__arthas/: meta.json
corpus/anomalyco__opencode/: meta.json
corpus/ansible__ansible/: meta.json
corpus/browser-use__browser-use/: meta.json
corpus/cline__cline/: meta.json
corpus/code-yeongyu__oh-my-openagent/: meta.json
corpus/danny-avila__LibreChat/: meta.json
corpus/daytonaio__daytona/: meta.json
corpus/earendil-works__pi/: meta.json
corpus/firecrawl__firecrawl/: meta.json
corpus/hiyouga__LlamaFactory/: meta.json
crates/actplane-ifc-compiler/: Cargo.toml
crates/actplane-ifc-compiler/src/: lib.rs
crates/actplane-ifc-compiler/src/dsl/: ast.rs  lower.rs  mod.rs
crates/actplane-runtime/: Cargo.toml
crates/actplane-runtime/src/: audit.rs  config.rs  control.rs  feedback.rs  hook.rs  lib.rs  mcp.rs  report.rs  runtime.rs
docs/: ARTIFACT.md  Makefile  actplane-research-plan.md  agent-policy-survey.md  arch_plan.md  compare.md  empirical.md  empirical_study.md  empirical_study_survey.md  eval.md  eval_benchmarks.md  eval_translate_prompt.md  feedback-design.md  harness_define.md  ideas.md  related_work.md  rule-language.md  security_model.md  taint-dsl-v2.md  taint-dsl.md  ux.md
policies/: readonly.yaml
policy/: reviewer-write-fence.yaml
script/: CLAUDE.snippet.md  actplane-feedback-hook.py  agent-feedback.md  clone-corpus-repos.sh  e2e_examples.sh  test_feedback_hook.py
test/: demo-linter-enforcement.sh  e2e_cases.yaml  e2e_file_flow_cases.yaml
(+11593 files in other folders)
