[package]
name = "actplane-runtime"
version = "0.1.8"
edition = "2024"
description = "Runtime control library for ActPlane engine loading, domains, feedback, and MCP integration."
license = "MIT"
repository = "https://github.com/eunomia-bpf/ActPlane"
readme = "../../README.md"
keywords = ["ebpf", "ifc", "runtime", "policy-engine", "actplane"]
categories = ["os::linux-apis"]

[lib]
name = "actplane_runtime"
path = "src/lib.rs"

[dependencies]
actplane-ifc-compiler = { version = "0.1.8", path = "../actplane-ifc-compiler" }
ebpf-ifc-engine = { version = "0.1.8", path = "../../bpf" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal", "io-std"] }
libc = "0.2"
rmcp = { version = "1", features = ["server", "transport-io"] }

[dev-dependencies]
tempfile = "3.10"
